@@ -154,7 +154,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
                 // Persist 3 created userSessions and clientSessions as offline
                 testApp[0] = realm.getClientByClientId("test-app");
-                session.sessions().getUserSessionsStream(realm, testApp[0]).collect(Collectors.toList())
+                session.sessions().readOnlyStreamUserSessions(realm, testApp[0], -1, -1)
+                        .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                        .toList()
                         .forEach(userSession -> offlineSessions.put(userSession.getId(), createOfflineSessionIncludeClientSessions(session, userSession)));
 
                 // Assert all previously saved offline sessions found
@@ -285,7 +287,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
                 sessionManager = new UserSessionManager(session);
                 persister = session.getProvider(UserSessionPersisterProvider.class);
 
-                session.sessions().getUserSessionsStream(realm, realm.getClientByClientId("test-app")).collect(Collectors.toList())
+                session.sessions().readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                        .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                        .toList()
                         .forEach(userSession -> createOfflineSessionIncludeClientSessions(session, userSession));
             });
 
@@ -387,7 +391,7 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
             }
             awaitLatch(afterFirstNodeLatch);
 
-            if (InfinispanUtils.isEmbeddedInfinispan()) {
+            if (!Profile.isFeatureEnabled(Profile.Feature.STATELESS) && InfinispanUtils.isEmbeddedInfinispan()) {
                 log.debug("Joining the cluster");
                 inComittedTransaction(session -> {
                     InfinispanConnectionProvider provider = session.getProvider(InfinispanConnectionProvider.class);
@@ -422,7 +426,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
         // create offline user and client sessions
         withRealm(realmId, (session, realm) -> {
-            session.sessions().getUserSessionsStream(realm, realm.getClientByClientId("test-app")).collect(Collectors.toList())
+            session.sessions().readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                    .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                    .toList()
                     .forEach(userSession -> createOfflineSessionIncludeClientSessions(session, userSession));
             return null;
         });
@@ -437,7 +443,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
         withRealm(realmId, (session, realm) -> {
             // remove offline client sessions from the cache
             // this simulates the cases when offline client sessions are lost from the cache due to various reasons (a cache limit/expiration/preloading issue)
-            session.getProvider(InfinispanConnectionProvider.class).getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).clear();
+            if (!Profile.isFeatureEnabled(Profile.Feature.STATELESS)) {
+                session.getProvider(InfinispanConnectionProvider.class).getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).clear();
+            }
 
             String clientUUID = realm.getClientByClientId("test-app").getId();
 
@@ -466,7 +474,8 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
         // create offline user and client sessions
         List<String> offlineUserSessionIds = withRealm(realmId, (session, realm) -> session.sessions()
-                .getUserSessionsStream(realm, realm.getClientByClientId("test-app"))
+                .readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
                 .map(userSession -> {
                             UserSessionModel offlineUserSession = Optional.ofNullable(
                                     session.sessions().getOfflineUserSession(realm, userSession.getId())
@@ -490,8 +499,10 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
         withRealm(realmId, (session, realm) -> {
             // remove offline client sessions from the cache
             // this simulates the cases when offline client sessions are lost from the cache due to various reasons (a cache limit/expiration/preloading issue)
-            session.getProvider(InfinispanConnectionProvider.class)
-                    .getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).clear();
+            if (!Profile.isFeatureEnabled(Profile.Feature.STATELESS)) {
+                session.getProvider(InfinispanConnectionProvider.class)
+                        .getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).clear();
+            }
 
             String clientUUID = realm.getClientByClientId("test-app").getId();
 
@@ -521,8 +532,8 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
             InfinispanConnectionProvider provider = session.getProvider(InfinispanConnectionProvider.class);
 
             // skip remote cache load as we are only interested in embedded caches
-            AdvancedCache offlineUSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_USER_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
-            AdvancedCache offlineCSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
+            AdvancedCache<?, ?> offlineUSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_USER_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
+            AdvancedCache<?, ?> offlineCSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
 
             Assert.assertEquals(0, offlineUSCache.size());
             Assert.assertEquals(0, offlineCSCache.size());
